# ImageClassifier

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  technical_task.txt
Vision/: db.sqlite3  manage.py
Vision/Vision/: asgi.py  settings.py  urls.py  wsgi.py
Vision/image_classification/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Vision/image_classification/migrations/: 0001_initial.py  0002_feedback.py  0003_image_category_image_feedback_created_at_and_more.py  0004_rename_feedback_created_at_image_created_at_and_more.py  0005_alter_image_is_correct.py
Vision/image_classification/model/: cifar_10_model.ipynb  classifier.py  cnn_model.ipynb
Vision/image_classification/templates/image_classification/: base.html  image_upload.html
Vision/static/: scripts.js  style.css
